update: 좋아요/북마크 매핑 안 되는 이유 해결, service에 상태 변환 로직 추가